--- a/public/index.html
+++ b/public/index.html
@@ -34,7 +34,7 @@
       rel="stylesheet"
     />
 
-    <title>React App</title>
+    <title>Moneybags</title>
   </head>
   <body id="page-top">
     <noscript>You need to enable JavaScript to run this app.</noscript>
