--- a/public/index.html
+++ b/public/index.html
@@ -37,7 +37,7 @@
 
     <title>Moneybags</title>
   </head>
-  <body id="page-top">
+  <body class="skin-blue sidebar-mini">
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="wrapper"></div>
     <!--
